--- a/src/jade/care/index.jade
+++ b/src/jade/care/index.jade
@@ -4,13 +4,13 @@ include ../partials/_svg
 include ../partials/_icon
 include ../partials/_footer
 
-+head("Treat | The Open Brain Project", "Connecting patients who have questions to answers, students to educational resources, and scientists to the latest tools for advancing knowledge and care.")
-body.treat
++head("Care | The Open Brain Project", "Connecting patients who have questions to answers, students to educational resources, and scientists to the latest tools for advancing knowledge and care.")
+body.care-page
 	+header()
 	main
-		section.page-hero.blue-gradient
+		section.page-hero
 			.container
-				h1 Treat
+				h1 Care
 				p Connecting patients who have questions about a recent diagnosis to answers, students to educational resources, and scientists and clinicians to the latest tools for advancing knowledge and patient care.
 		section.resources-for-patients-section
 			.container
