--- a/src/jade/care/technology/index.jade
+++ b/src/jade/care/technology/index.jade
@@ -4,12 +4,12 @@ include ../../partials/_svg
 include ../../partials/_icon
 include ../../partials/_footer
 
-+head("Brain Explorer | The Open Brain Project", "Where personalized medicine meets translational human brain mapping.")
-body.discover-page.brain-explorer-page
++head("Technology | The Open Brain Project", "Where personalized medicine meets translational human brain mapping.")
+body.care-page.technology-page
 	+header()
 	section.page-hero
 			.container
-				h1 Brain Explorer
+				h1 Technology
 	section
 
 	+footer()
