--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -8,56 +8,9 @@ include ./partials/_signup
 body.home
 	+header("")
 	main
-		section.main-area-blocks-section
+		section.mission-section
 			.container
-				.link-blocks.main-area-blocks
-					a.link-block.discover-block.light-blue-gradient(href="/discover")
-						.container
-							h1 
-								| Discover
-								+icon("rarr")
-							p Opening new frontiers in understanding human brain structure and function.
-							//- .button
-							//- 	| Learn More
-							//- 	+icon("rarr")
-					a.link-block.translate-block.orange-gradient(href="/translate")
-						.container
-							h1 
-								| Translate
-								+icon("rarr")
-							p Turning the latest discoveries about human brain structure and function into better outcomes for patients.
-							//- .button
-							//- 	| Learn More
-							//- 	+icon("rarr")
-					a.link-block.treat-block.blue-gradient(href="/treat")
-						.container
-							h1 
-								| Treat
-								+icon("rarr")
-							p Connecting patients who have questions about a recent diagnosis to answers, students to educational resources, and scientists and clinicians to the latest tools for advancing knowledge and patient care.
-							//- .button
-							//- 	| Learn More
-							//- 	+icon("rarr")
-		//- section.focus-area-section
-		//- 	.container
-		//- 		h1 Our Focus Areas
-		//- 	.container
-		//- 		.link-blocks.focus-area-blocks
-		//- 			a.link-block.stroke-block.pink-gradient(href="/stroke")
-		//- 				.container
-		//- 					h1 
-		//- 						| Stroke
-		//- 						+icon("rarr")
-		//- 			a.link-block.stroke-block.yellow-gradient(href="/brain-tumors")
-		//- 				.container
-		//- 					h1 
-		//- 						| Brain Tumors
-		//- 						+icon("rarr")
-		//- 			a.link-block.stroke-block.purple-gradient(href="/tbi")
-		//- 				.container
-		//- 					h1 
-		//- 						| Traumatic Brain Injury
-		//- 						+icon("rarr")
+				p Supporting discoveries about the human brain and their translation into treatment.
 		section.partners-section
 			.container
 				h1 Collaborating Laboratories by Institution
@@ -77,11 +30,11 @@ body.home
 			.container
 				h2 In the News
 				h3 New Research
-				:markdown
+				:marked
 					* [URMC: New Study Reshapes Understanding of How the Brain Recovers from Injury](https://www.urmc.rochester.edu/news/story/5519/new-study-reshapes-understanding-of-how-the-brain-recovers-from-injury.aspx)
 				h3 Preserving Dan's Music Abilities
 				p Learn about Dan, a musician and music teacher, who went through our the Translational Brain Mapping Program to remove his tumor while preserving his music abilities.
-				:markdown
+				:marked
 					* [URMC: A patient plays his saxophone during brain surgery](http://www.urmc.rochester.edu/neurosurgery/news.aspx?start=01-01-2017&amp;end=12-31-2017#newsItem2196)
 					* [NPR Health: This music teacher played his saxophone while in brain surgery](http://www.npr.org/sections/health-shots/2017/08/25/545710598/this-music-teacher-played-his-saxophone-while-in-brain-surgery)
 					* [Democrat and Chronicle: Still on operating table, patient plays sax to show surgery was success](http://www.democratandchronicle.com/story/news/2017/09/02/saxophone-solo-after-brain-surgery-signal-success-rochester/626876001/)
@@ -91,7 +44,7 @@ body.home
 					* [New Atlas: Mid-surgery sax solo sounds success for retaining musical ability](http://newatlas.com/patient-plays-saxophone-brain-surgery/51094/)
 				h3 Predicting Vision Recovery After Brain Tumor Removal
 				p Understanding vision's recovery process could have implications for many different injuries of the central nervous system.
-				:markdown
+				:marked
 					* [URMC: New imaging technique helps predict how vision recovers after brain tumor removal](http://www.rochester.edu/newscenter/myelin-linked-to-speedy-recovery-of-human-visual-system-after-tumor-removal-82512/)
 					* [Futurity: Images show how brain heals itself after tumor](http://www.futurity.org/pituitary-brain-tumor-vision-817882/)
 					* [WHEC News 10: Greece native defends thesis in cognitive neuroscience 12 years after aneurysm](http://www.whec.com/news/university-of-rochester-medical-center-student-research-scientist/4559749/)
@@ -99,7 +52,7 @@ body.home
 					* [URMC: Student work opens the brain to help surgeons remove tumors](http://www.rochester.edu/newscenter/student-work-opens-brain-surgeons-remove-tumors-262152/)
 				h3 Resident and Former SMD Student Wins Cadbury Award
 				p Neurosurgery Resident and Former SMD Student David Paul (M.D. ’16) Wins National Cadbury Award for Academic and Volunteer Achievements.
-				:markdown
+				:marked
 					* [Pilot research offers new insights about how the brain fixes itself](https://www.urmc.rochester.edu/news/story/4450/smd-student-david-paul-m.d.-16-wins-national-cadbury-award--for-academic-and-volunteer-achievements.aspx)
 		section.videos-section
 			.container
