--- a/src/jade/partials/_footer.jade
+++ b/src/jade/partials/_footer.jade
@@ -4,4 +4,5 @@ mixin footer()
 	footer
 		.container
 			.copyright &copy; 2019 Brad Mahon of BrainSurvey, LLC
+	script(src="../../js/openbrainproject.js")
 	+svg()
