--- a/src/jade/partials/_head.jade
+++ b/src/jade/partials/_head.jade
@@ -7,6 +7,7 @@ mixin head(pageTitle, pageDescription)
 			title=pageTitle
 			meta(name="description", content=pageDescription)
 			link(href="../../css/style.min.css", rel="stylesheet")
+			// link(href="https://fonts.googleapis.com/css?family=PT+Sans:400,400i,700&display=swap", rel="stylesheet")
 			link(rel="apple-touch-icon", sizes="180x180", href="../img/apple-touch-icon.png")
 			link(rel="icon", type="image/png", sizes="32x32", href="../img/favicon-32x32.png")
 			link(rel="icon", type="image/png", sizes="16x16", href="../img/favicon-16x16.png")
