--- a/src/jade/partials/_svg.jade
+++ b/src/jade/partials/_svg.jade
@@ -2,6 +2,8 @@ mixin svg()
 	svg(style="display: none", xmlns="http://www.w3.org/2000/svg")
 		symbol#menu(viewbox="0 0 6 6")
 			path(d="M1 1.5 L5 1.5 M1 3 L5 3 M1 4.5 L5 4.5", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round")
+		symbol#filter(viewbox="0 0 6 6")
+			path(d="M1 1.5 L5 1.5 M2 3 L4 3 M3 4.5 L3 4.5", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round")
 		symbol#close(viewbox="0 0 6 6")
 			path(d="M1.5 1.5L4.5 4.5M4.5 1.5L1.5 4.5", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round")
 		symbol#larr(viewbox="0 0 6 6")
@@ -14,6 +16,8 @@ mixin svg()
 			path(d="M1 3 a2 2 0 1 0 4 0 a2 2 0 1 0 -4 0 M4.5 4.5 L6 6 M2.5 3 L3.5 3", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round")
 		symbol#search(viewbox="0 0 7 7")
 			path(d="M1 3 a2 2 0 1 0 4 0 a2 2 0 1 0 -4 0 M4.5 4.5 L6 6", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round")
+		symbol#external(viewbox="0 0 6 6")
+			path(d="M 2 2 L 1 2 L 1 5 L 4 5 L 4 4 M 3 3 L 5 1 L 3.5 1 L 5 1 L 5 2.5", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round", stroke-linejoin="round")
 		symbol#rarr(viewbox="0 0 6 6")
 			path(d="M1 3 L5 3 M3.5 1.5 L5 3 M3.5 4.5 L5 3", stroke="currentColor", stroke-width="1", fill="none", stroke-linecap="round")
 		symbol#spinner(viewBox="0 0 30 30")
