--- a/src/jade/tbi/index.jade
+++ b/src/jade/tbi/index.jade
@@ -5,7 +5,7 @@ include ../partials/_icon
 include ../partials/_footer
 
 +head("Traumatic Brain Injury Explorer | The Open Brain Project", "Hirad and colleagues (2019) used MRI to measure the structural changes that occur in an athlete’s brain from a single season of football.")
-body.tbi
+body.tbi-page
 	+header("tbi")
 	main
 		.page-title
