--- a/src/jade/translate/brain-mapping-with-mri/index.jade
+++ b/src/jade/translate/brain-mapping-with-mri/index.jade
@@ -4,12 +4,11 @@ include ../../partials/_svg
 include ../../partials/_icon
 include ../../partials/_footer
 
-+head("Brain Explorer | The Open Brain Project", "Where personalized medicine meets translational human brain mapping.")
-body.discover-page.brain-explorer-page
++head("Brain Mapping with MRI | The Open Brain Project", "Where personalized medicine meets translational human brain mapping.")
+body.translate-page.brain-mapping-with-mri-page
 	+header()
 	section.page-hero
 			.container
-				h1 Brain Explorer
+				h1 Brain Mapping with MRI
 	section
-
 	+footer()
