--- a/src/jade/discover/experiment-exchange/index.jade
+++ b/src/jade/discover/experiment-exchange/index.jade
@@ -5,11 +5,10 @@ include ../../partials/_icon
 include ../../partials/_footer
 
 +head("Brain Explorer | The Open Brain Project", "Where personalized medicine meets translational human brain mapping.")
-body.discover-page.brain-explorer-page
+body.discover-page.experiment-exchange-page
 	+header()
 	section.page-hero
 			.container
-				h1 Brain Explorer
+				h1 Experiment Exchange
 	section
-
 	+footer()
