--- a/src/jade/404.jade
+++ b/src/jade/404.jade
@@ -11,9 +11,8 @@ body.home
 			.container
 				h1.four-oh-four-title 404
 				h2 Sorry, this page isn't available.
-				a.link-block.blue-gradient(href="/")
-						.container
-							h1 
-								| Go home
-								+icon("rarr")
+				a.container
+					h1 
+						| Go home
+						+icon("rarr")
 	+footer()
