--- a/src/jade/404.jade
+++ b/src/jade/404.jade
@@ -11,7 +11,7 @@ body.home
 			.container
 				h1.four-oh-four-title 404
 				h2 Sorry, this page isn't available.
-				a.container
+				a.container(href="/")
 					h1 
 						| Go home
 						+icon("rarr")
