--- a/src/jade/care/resources-for-patients/index.jade
+++ b/src/jade/care/resources-for-patients/index.jade
@@ -10,6 +10,7 @@ body.care-page.resources-for-patients-page
 	section.page-hero
 			.container
 				h1 Resources for Patients
-	section
-
+	main.page-content
+		section
+			.container
 	+footer()
