--- a/src/jade/discover/brainsurvey/index.jade
+++ b/src/jade/discover/brainsurvey/index.jade
@@ -10,6 +10,7 @@ body.discover-page.brain-explorer-page
 	section.page-hero
 			.container
 				h1 Brain Explorer
-	section
-
+	main.page-content
+		section
+			.container
 	+footer()
