--- a/src/jade/discover/experiment-exchange/index.jade
+++ b/src/jade/discover/experiment-exchange/index.jade
@@ -10,5 +10,7 @@ body.discover-page.experiment-exchange-page
 	section.page-hero
 			.container
 				h1 Experiment Exchange
-	section
+	main.page-content
+		section
+			.container
 	+footer()
