--- a/src/jade/discover/index.jade
+++ b/src/jade/discover/index.jade
@@ -12,4 +12,7 @@ body.discover-page
 			.container
 				h1 Discover
 				p Opening new frontiers in understanding human brain structure and function.
+		main.page-content
+			section
+				.container
 	+footer()
