--- a/src/jade/translate/brain-mapping-during-neurosurgery/index.jade
+++ b/src/jade/translate/brain-mapping-during-neurosurgery/index.jade
@@ -10,5 +10,7 @@ body.translate-page.brain-mapping-during-neurosurgery-page
 	section.page-hero
 			.container
 				h1 Brain Mapping during Neurosurgery
-	section
+	main.page-content
+		section
+			.container
 	+footer()
