--- a/src/jade/translate/index.jade
+++ b/src/jade/translate/index.jade
@@ -7,15 +7,11 @@ include ../partials/_footer
 +head("Translate | The Open Brain Project", "Turning the latest discoveries about human brain structure and function into better outcomes for patients.")
 body.translate-page
 	+header()
-	main
-		section.page-hero
-			.container
-				h1 Translate
-				p Turning the latest discoveries about human brain structure and function into better outcomes for patients.
-		//- .wrapper.videos-list
-		//- 	a.video-block(href="https://www.youtube.com/watch?v=tgZrbLlK6IM")
-		//- 		.video-thumbnail(style="background-image: url(https://i.ytimg.com/vi/tgZrbLlK6IM/sddefault.jpg)")
-		//- 			.icon-youtube-wrapper
-		//- 				+icon("youtube")
-		//- 		h4.video-title The mission of the Program for Translational Brain Mapping
+	section.page-hero
+		.container
+			h1 Translate
+			p Turning the latest discoveries about human brain structure and function into better outcomes for patients.
+	main.page-content
+			section
+				.container
 	+footer()
