--- a/src/jade/care/index.jade
+++ b/src/jade/care/index.jade
@@ -7,16 +7,11 @@ include ../partials/_footer
 +head("Care | The Open Brain Project", "Connecting patients who have questions to answers, students to educational resources, and scientists to the latest tools for advancing knowledge and care.")
 body.care-page
 	+header()
-	main
-		section.page-hero
+	section.page-hero
+		.container
+			h1 Care
+			p Connecting patients who have questions about a recent diagnosis to answers, students to educational resources, and scientists and clinicians to the latest tools for advancing knowledge and patient care.
+	main.page-content
+		section
 			.container
-				h1 Care
-				p Connecting patients who have questions about a recent diagnosis to answers, students to educational resources, and scientists and clinicians to the latest tools for advancing knowledge and patient care.
-		section.resources-for-patients-section
-			.container
-				h2 Resources for Patients
-		section.explore-the-human-brain-section
-			.container
-				h2 Explore the Human Brain
-	
 	+footer()
