--- a/src/jade/discover/open-data-sets/index.jade
+++ b/src/jade/discover/open-data-sets/index.jade
@@ -10,10 +10,11 @@ body.discover-page.open-data-sets-page
 	section.page-hero
 			.container
 				h1 Open Data Sets
-	section
-		.container
-			:markdown
-				* “Survival of Retinal Ganglion Cells After Damage to the Occipital Lobe in Humans is Activity-Dependent” [[Link]](https://kilthub.cmu.edu/articles/Survival_of_Retinal_Ganglion_Cells_After_Damage_to_the_Occipital_Lobe_in_Humans_is_Activity-Dependent/7403780)
-				* “A common neural signature of brain injury in concussion and sub-concussion” [[Link]](https://kilthub.cmu.edu/articles/A_common_neural_signature_of_brain_injury_in_concussion_and_sub-concussion/7964984/1)
-				* “Neural consequences of mTBI” [Coming soon: MRI dataset including 130+ Diffusion Tensor MRI scans of mTBI patients and 90+ healthy controls]
+	main.page-content
+		section
+			.container
+				:markdown
+					* “Survival of Retinal Ganglion Cells After Damage to the Occipital Lobe in Humans is Activity-Dependent” [[Link]](https://kilthub.cmu.edu/articles/Survival_of_Retinal_Ganglion_Cells_After_Damage_to_the_Occipital_Lobe_in_Humans_is_Activity-Dependent/7403780)
+					* “A common neural signature of brain injury in concussion and sub-concussion” [[Link]](https://kilthub.cmu.edu/articles/A_common_neural_signature_of_brain_injury_in_concussion_and_sub-concussion/7964984/1)
+					* “Neural consequences of mTBI” [Coming soon: MRI dataset including 130+ Diffusion Tensor MRI scans of mTBI patients and 90+ healthy controls]
 	+footer()
