--- a/src/jade/scientific-products/technology/index.jade
+++ b/src/jade/scientific-products/technology/index.jade
@@ -5,11 +5,12 @@ include ../../partials/_icon
 include ../../partials/_footer
 
 +head("Technology | The Open Brain Project", "Where personalized medicine meets translational human brain mapping.")
-body.care-page.technology-page
+body.scientific-products-page.technology-page
 	+header()
 	section.page-hero
 			.container
 				h1 Technology
-	section
-
+	main.page-content
+		section
+			.container
 	+footer()
